Version 1.0.3:
  Bug fixes:
  - Unsplitting caused segmentation faults.
  - The connection to GPM remained open during suspend, making GPM useless for
    the duration of the suspend.

Version 1.0.2:
	Fix hanging on exit in the X11 module.

Version 1.0.1:
	Fix compilation on some older compilers, that don't automatically apply
	moves.

Version 1.0.0:
	The API has been overhauled to use more of the features of the C++11
	standard. This release is both binary and API incompatible with previous
	releases.

Version 0.6.4:
	Bug fixes:
	- Bracketed paste mode was not handled correctly due to inadvertent setting
	  of the EKEY_PROTECT bit.

Version 0.6.3:
	Bug fixes:
	- The indicator in list panes would disappear of screen when scrolling
	  beyond the first page.
	- The cursor position after undoing an unindent operation was set
	  incorrectly.

Version 0.6.2:
	Bug fixes:
	- Bracketed-paste mode would hang indefinitely and did not properly
	  recognize line endings.

Version 0.6.1:
	Bug fixes:
	- Key bindings for split windows (F8 and Shift-F8) were broken.

Version 0.6.0:
	New features:
	- Allow replacing of menu items.
	- Make key bindings configurable.
	- Add select-all behavior to text fields.
	- Add delete-line capability to edit window.
	- Add support for the so-called SGR mouse protocol.
	- Allow disabling of claiming the primary selection.
	- Use bracketed-paste mode where available to improve pasting by the
	  terminal itself.
	- Remove support for Xlib, leaving the XCB library as the only library for
	  X11 support. The Xlib version was long untested and broken.
	- Remove support for libsigc++. This has been superseeded by C++11 support,
	  which libsigc++ itself has required now for a long time, removing the
	  value of the libsigc++ library for libt3widget.

	Bug fixes:
	- Improved handling of conjoining Jamo (Hangul).
	- Pressing enter while the color picker is selected in the
	  attribute-selection dialog now activates the OK button as expected.