@@ -381,15 +381,17 @@ complex_error_t init(const init_parameters_t *params) {
 
 void iterate() {
   key_t key;
+  mouse_event_t mouse_event;
 
   dialog_t::update_dialogs();
   t3_term_update();
+  draw_mouse_cursor(mouse_event);
   key = read_key();
   if (key == EKEY_MOUSE_EVENT) {
-    mouse_event_t event = read_mouse_event();
-    lprintf("Got mouse event: x=%d, y=%d, button_state=%d, modifier_state=%d\n", event.x, event.y,
-            event.button_state, event.modifier_state);
-    mouse_target_t::handle_mouse_event(event);
+    mouse_event = read_mouse_event();
+    lprintf("Got mouse event: x=%d, y=%d, button_state=%d, modifier_state=%d\n", mouse_event.x,
+            mouse_event.y, mouse_event.button_state, mouse_event.modifier_state);
+    mouse_target_t::handle_mouse_event(mouse_event);
   } else {
     lprintf("Got key %04X\n", key);
     switch (key) {
